hphp/test/zend/bad/ext-spl/SplFixedArray_offsetExists_less_than_zero.php
<?php
$array = new SplFixedArray(5);
if($array->offsetExists(-10) === false) {
	echo 'PASS';
}
?>